--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -5,6 +5,9 @@ body {
 	display: grid;
 	margin: 0;
 	padding: 0;
+	color: #484848;
+	font-size: 14px;
+	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	min-height: 100%;
 	grid-template-areas: "header" "container" "footer";
 	grid-template-rows: calc(70px + 1px) 1fr calc(60px + 1px);
